crates/kernel/tests/table/snapshots/main__table__router__nudging_speed_up_saturates_at_the_top.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Playback(
            StepSpeed {
                steps: 1,
            },
        ),
        One(
            Audio(
                SetSpeed(
                    Speed(
                        1.25,
                    ),
                ),
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.25,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Playback(
            StepSpeed {
                steps: 1,
            },
        ),
        One(
            Audio(
                SetSpeed(
                    Speed(
                        1.5,
                    ),
                ),
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.5,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Playback(
            StepSpeed {
                steps: 1,
            },
        ),
        One(
            Audio(
                SetSpeed(
                    Speed(
                        1.75,
                    ),
                ),
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.75,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Playback(
            StepSpeed {
                steps: 1,
            },
        ),
        One(
            Audio(
                SetSpeed(
                    Speed(
                        2.0,
                    ),
                ),
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                2.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Playback(
            StepSpeed {
                steps: 1,
            },
        ),
        One(
            Audio(
                SetSpeed(
                    Speed(
                        2.25,
                    ),
                ),
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                2.25,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
