crates/kernel/tests/table/snapshots/main__table__router__one_ab_press_marks_the_start.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 414
expression: "walked(model, messages)"
---
[
    (
        Playback(
            AbMark,
        ),
        None,
        Playing {
            track: Track {
                path: "/tmp/track0.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track0.flac",
                tagging: Read,
            },
            head: Playhead {
                offset: 10s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: Some(
                AOnly(
                    10s,
                ),
            ),
            output: Ready,
        },
        None,
    ),
]
