crates/kernel/tests/table/snapshots/main__table__router__opening_history_loads_the_log.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                History,
            ),
        ),
        Batch(
            [
                Library(
                    LoadHistory {
                        limit: 200,
                    },
                ),
                Animate(
                    OverlayOpened,
                ),
            ],
        ),
        Stopped,
        Some(
            History(
                CursorOver {
                    cursor: Cursor {
                        index: 0,
                        len: 0,
                    },
                    content: (),
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Close,
        ),
        One(
            Animate(
                OverlayClosed,
            ),
        ),
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 0,
            len: 0,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
