crates/kernel/tests/table/snapshots/main__table__router__repeat_one_preempts_a_queued_track.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 416
expression: "walked(model, messages)"
---
[
    (
        Audio(
            Playhead(
                95s,
            ),
        ),
        One(
            System(
                PlaybackPosition(
                    95s,
                ),
            ),
        ),
        Playing {
            track: Track {
                path: "/tmp/track1.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read,
            },
            head: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: None,
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 1,
            len: 3,
        },
        [
            Index(2),
        ],
        One,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            preload_lead: 10s,
            output: Ready,
        },
        None,
    ),
    (
        Elapsed(
            Mark(
                Revision(
                    0,
                ),
            ),
        ),
        Batch(
            [
                Audio(
                    Preload {
                        path: "/tmp/track1.flac",
                        gain: None,
                        revision: Revision(
                            1,
                        ),
                    },
                ),
                Library(
                    PrefetchCover(
                        "/tmp/track1.flac",
                    ),
                ),
                System(
                    PlaybackPosition(
                        95s,
                    ),
                ),
            ],
        ),
        Playing {
            track: Track {
                path: "/tmp/track1.flac",
                duration: Some(
                    100s,
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate_kbps: None,
                    sample_rate_hz: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read,
            },
            head: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preload: Queued(
                Track {
                    path: "/tmp/track1.flac",
                    duration: Some(
                        100s,
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate_kbps: None,
                        sample_rate_hz: None,
                        bits_per_sample: None,
                        channels: None,
                        replay_gain: None,
                    },
                    display: "track1.flac",
                    tagging: Read,
                },
            ),
        },
        None,
        Cursor {
            index: 0,
            len: 0,
        },
        Cursor {
            index: 1,
            len: 3,
        },
        [
            Index(2),
        ],
        One,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab: None,
            preload_lead: 10s,
            output: Ready,
        },
        None,
    ),
]
