crates/kernel/tests/table/snapshots/main__table__router__repeat_one_preempts_the_queue_when_a_track_ends.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Audio(
            Ended,
        ),
        [
            Audio(
                Load(
                    TrackLoad {
                        path: "/tmp/track1.flac",
                        decibels: None,
                        revision: Revision(
                            1,
                        ),
                    },
                ),
            ),
            Library(
                Disk(
                    AppendHistory(
                        HistoryEntry {
                            track_source: Local(
                                "/tmp/track1.flac",
                            ),
                            title: "track1",
                            artist: None,
                            played_at: Moment(
                                0ns,
                            ),
                        },
                    ),
                ),
            ),
            Macos(
                NowPlaying(
                    Some(
                        Track {
                            source: Local(
                                "/tmp/track1.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track_number: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate: None,
                                sample_rate: None,
                                bits_per_sample: None,
                                channels: None,
                                decibels: None,
                            },
                            display: "track1.flac",
                            tagging: Tagged(
                                100s,
                            ),
                        },
                    ),
                ),
            ),
            Audio(
                SetPlayback(
                    Playing,
                ),
            ),
            Macos(
                SetPlayback(
                    Playing,
                ),
            ),
            Animate(
                TrackChanged,
            ),
            Animate(
                PlaybackChanged(
                    Play,
                ),
            ),
        ],
        Loading(
            Track {
                source: Local(
                    "/tmp/track1.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "track1.flac",
                tagging: Tagged(
                    100s,
                ),
            },
        ),
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 1,
            len: 3,
        },
        [
            Local(
                "/tmp/track0.flac",
            ),
        ],
        One,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep_timer: None,
            ab_loop: None,
            output_status: Ready,
        },
        [],
    ),
]
