crates/kernel/tests/table/snapshots/main__table__router__repeat_one_preloads_and_hands_off_to_the_same_track.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Audio(
            Playhead(
                95s,
            ),
        ),
        [
            Macos(
                SetPosition(
                    95s,
                ),
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track1.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 1,
            len: 3,
        },
        [],
        One,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Elapsed(
            Lookahead(
                Revision(
                    0,
                ),
            ),
        ),
        [
            Audio(
                Preload(
                    TrackLoad {
                        path: "/tmp/track1.flac",
                        gain: None,
                        revision: Revision(
                            2,
                        ),
                    },
                ),
            ),
            Macos(
                SetPosition(
                    95s,
                ),
            ),
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track1.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 95s,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: Some(
                Track {
                    source: Local(
                        "/tmp/track1.flac",
                    ),
                    tags: Tags {
                        title: None,
                        artist: None,
                        album: None,
                        album_artist: None,
                        date: None,
                        genre: None,
                        track: None,
                        track_total: None,
                        disc: None,
                        composer: None,
                        comment: None,
                        lyrics: None,
                    },
                    audio_format: AudioFormat {
                        format: None,
                        bitrate: None,
                        sample_rate: None,
                        bits_per_sample: None,
                        channels: None,
                        replay_gain: None,
                    },
                    display: "track1.flac",
                    tagging: Read(
                        100s,
                    ),
                },
            ),
        },
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 1,
            len: 3,
        },
        [],
        One,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Audio(
            TrackChanged,
        ),
        [
            Library(
                Disk(
                    AppendHistory(
                        HistoryEntry {
                            track: Local(
                                "/tmp/track1.flac",
                            ),
                            title: "track1",
                            artist: None,
                            at: Moment(
                                0ns,
                            ),
                        },
                    ),
                ),
            ),
            Macos(
                NowPlaying(
                    Some(
                        Track {
                            source: Local(
                                "/tmp/track1.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate: None,
                                sample_rate: None,
                                bits_per_sample: None,
                                channels: None,
                                replay_gain: None,
                            },
                            display: "track1.flac",
                            tagging: Read(
                                100s,
                            ),
                        },
                    ),
                ),
            ),
            Audio(
                SetPlayback(
                    Playing,
                ),
            ),
            Macos(
                SetPlayback(
                    Playing,
                ),
            ),
            Animate(
                TrackChanged,
            ),
            Animate(
                PlaybackChanged(
                    Play,
                ),
            ),
            Macos(
                SetPosition(
                    0ns,
                ),
            ),
            After {
                delay: 90s,
                timer: Lookahead(
                    Revision(
                        4,
                    ),
                ),
            },
        ],
        Playing {
            track: Track {
                source: Local(
                    "/tmp/track1.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    replay_gain: None,
                },
                display: "track1.flac",
                tagging: Read(
                    100s,
                ),
            },
            playhead: Playhead {
                offset: 0ns,
                since: Moment(
                    0ns,
                ),
                speed: Speed(
                    1.0,
                ),
            },
            preloaded: None,
        },
        None,
        Cursor {
            index: 0,
            len: 3,
        },
        Cursor {
            index: 1,
            len: 3,
        },
        [],
        One,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
