crates/kernel/tests/table/snapshots/main__table__router__saving_a_playlist_confirms_the_validated_name.snap
---
source: crates/kernel/tests/table/router.rs
assertion_line: 368
expression: "walked(model, messages)"
---
[
    (
        Overlay(
            Open(
                SavePlaylist,
            ),
        ),
        [
            Animate(
                OverlayOpened,
            ),
        ],
        Stopped,
        Some(
            SavePlaylist(
                TextEntry {
                    input: "",
                    error: None,
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 1,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Text(
                Char(
                    'm',
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            SavePlaylist(
                TextEntry {
                    input: "m",
                    error: None,
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 1,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Text(
                Char(
                    'i',
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            SavePlaylist(
                TextEntry {
                    input: "mi",
                    error: None,
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 1,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Text(
                Char(
                    'x',
                ),
            ),
        ),
        [],
        Stopped,
        Some(
            SavePlaylist(
                TextEntry {
                    input: "mix",
                    error: None,
                },
            ),
        ),
        Cursor {
            index: 0,
            len: 1,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
    (
        Overlay(
            Confirm,
        ),
        [
            Animate(
                OverlayClosed,
            ),
            Library(
                SavePlaylist {
                    name: PlaylistFileName(
                        "mix",
                    ),
                    tracks: [
                        Track {
                            source: Local(
                                "/tmp/track0.flac",
                            ),
                            tags: Tags {
                                title: None,
                                artist: None,
                                album: None,
                                album_artist: None,
                                date: None,
                                genre: None,
                                track: None,
                                track_total: None,
                                disc: None,
                                composer: None,
                                comment: None,
                                lyrics: None,
                            },
                            audio_format: AudioFormat {
                                format: None,
                                bitrate: None,
                                sample_rate: None,
                                bits_per_sample: None,
                                channels: None,
                                replay_gain: None,
                            },
                            display: "track0",
                            tagging: Listed(
                                None,
                            ),
                        },
                    ],
                },
            ),
        ],
        Stopped,
        None,
        Cursor {
            index: 0,
            len: 1,
        },
        Cursor {
            index: 0,
            len: 1,
        },
        [],
        Off,
        Linear,
        Transport {
            volume: Percent(
                50,
            ),
            speed: Speed(
                1.0,
            ),
            sleep: None,
            ab_loop: None,
            output: Ready,
        },
        [],
    ),
]
